package com.github.tomap.modeler.model.diagramClass.type;

public class AString extends TypeBase{

	public AString() {
		super("String", 4);
	}

}
