package com.github.tomap.modeler.model.diagramClass.type;

public class Boolean extends TypeBase{
		
	public Boolean() {
		super("boolean", 1);
	}

}
