package com.github.tomap.modeler.model.diagramClass.visibility;

public class Protected extends Visibility{

	public Protected() {
		super("#");
	}

}
